--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Tasarımcı Yazısı -->
     <div id="container">
-        <p>Tasarımcı: <strong>zaiks281</strong></p>
+        <p>Tasarımcı: <strong>zaiks281 ve meloneko</strong></p>
     </div>
 </body>
 </html>
